@@ -6,8 +6,8 @@ Name:		globus-xio-gsi-driver
 %global apache_license ASL 2.0
 %endif
 %global _name %(tr - _ <<< %{name})
-Version:	3.10
-Release:	3%{?dist}
+Version:	3.11
+Release:	1%{?dist}
 Vendor:	Globus Support
 Summary:	Globus Toolkit - Globus XIO GSI Driver
 
@@ -154,6 +154,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man3/*
 
 %changelog
+* Fri Apr 14 2017 Globus Toolkit <support@globus.org> - 3.11-1
+- Fix crash when checking for anonymous GSS name when name comparison fails
+
 * Thu Sep 08 2016 Globus Toolkit <support@globus.org> - 3.10-3
 - Rebuild after changes for el.5 with openssl101e
 
